--- a/html/index.html
+++ b/html/index.html
@@ -8,14 +8,14 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <title>Harbacore Intern</title>
     </head>
     <body>
         <div class="container-fluid"><a href="#"    target="_blank">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" src="shopping.png"  alt="Infinity Hot 9 Pro(64 GB, Violet)">
+                    <img class="img-fluid" src="../images/photo.jpeg"  alt="Infinity Hot 9 Pro(64 GB, Violet)">
                 </div>
             <div class="col-md-4">
                 <h3>Infinity Hot 9 Pro(Violet, 64GB) </h3>
@@ -41,7 +41,7 @@
     <div class="container-fluid"><a href="#" target="_blank">
         <div class="row">
             <div class="col-md-4">
-                <img class="img-fluid" src="voltas-sac-123-pzy-r.png" alt="Infinity Hot 9 Pro(64 GB, Violet)">
+                <img class="img-fluid" src="../images/photo.jpeg" alt="Infinity Hot 9 Pro(64 GB, Violet)">
             </div>
             <div class="col-md-4">
                 <h3>Infinity Hot 9 Pro(Violet, 64GB) </h3>
@@ -67,7 +67,7 @@
         <div class="container-fluid"><a href="#" target="_blank">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid"          src="shopping%20(1).png" alt="Infinity Hot 9 Pro(64 GB, Violet)">
+                    <img class="img-fluid" src="../images/photo.jpeg" alt="Infinity Hot 9 Pro(64 GB, Violet)">
                 </div>
             <div class="col-md-4">
                 <h3>Infinity Hot 9 Pro(Violet, 64GB) </h3>
@@ -93,7 +93,7 @@
         <div class="container-fluid"><a href="#" target="_blank">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid"         src="photo.jpeg" alt="Infinity Hot 9 Pro(64 GB, Violet)">
+                    <img class="img-fluid" src="../images/photo.jpeg" alt="Infinity Hot 9 Pro(64 GB, Violet)">
                 </div>
                 <div class="col-md-4">
                 <h3>Infinity Hot 9 Pro(Violet, 64GB) </h3>
