--- a/registerpage/index.html
+++ b/registerpage/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-
+<script src="https://use.fontawesome.com/b41bd8f02a.js"></script>
     <title>Register</title>
   </head>
   <body>
@@ -18,12 +18,12 @@
         <div class="col-md-5 divider d-none d-md-block">
             <div class="content"><div class ="logo">Harbacore</div><br><br>
             <ul class="lists d-none d-md-block">
-                <li><i class="icon-ok-sign pr-2 icons"></i> <b>Quick and free sign-up</b><br><span class="items">Enter your e-mail address to create an account.</span><br>
+                <li><i class="fa fa-check-circle icons pr-2" aria-hidden="true" ></i><b>Quick and free sign-up</b><br><span class="items pl-4">Enter your e-mail address to create an account.</span><br>
                 </li><br>
-                <li><i class="icon-ok-sign pr-2 icons"></i> <b>Global payment methods</b><br><span class="items">Accept credit cards, Apple Pay, ACH and more</span>
+                <li><i class="fa fa-check-circle icons pr-2" aria-hidden="true" ></i><b>Global payment methods</b><br><span class="items pl-4">Accept credit cards, Apple Pay, ACH and more</span>
 
                 </li><br>
-                <li><i class="icon-ok-sign pr-2 icons"></i> <b>Start accepting payments</b><br><span class="items">Use Stripe’s API or pick a pre-built solution.</span>
+                <li><i class="fa fa-check-circle icons pr-2" aria-hidden="true" ></i><b>Start accepting payments</b><br><span class="items pl-4">Use Stripe’s API or pick a pre-built solution.</span>
 
                 </li>
                 </ul></div>
@@ -34,13 +34,13 @@
         <div class="col-md-7">
             <div class="account">Create your Harbacore account.
              <form id="register">
-                    <label for="email" class="input">Email : </label>
-                    <input type="email"  class="mail2" id="email" name="email" maxlength="50"  required>
-                    <label for="fname" class="input">First name:</label>
-                    <input type="text" id="fname" name="fname" required>
-                    <label for="pwd" class="input">Password:</label>
-                    <input type="password" id="pwd" name="pwd" required>
-                 <label for="pwd" class="input">Confirm Password:</label>
+                    <label for="email" class="input">Email :</label><br>
+                    <input type="email"  class="mail2" id="email" name="email" maxlength="50"  required><br>
+                    <label for="fname" class="input">First name:</label><br>
+                    <input type="text" id="fname" name="fname" required><br>
+                    <label for="pwd" class="input">Password:</label><br>
+                    <input type="password" id="pwd" name="pwd" required><br>
+                 <label for="pwd" class="input">Confirm Password:</label><br>
                     <input type="password" id="pwd" name="pwd" required><br>
                  <button type="button" disabled form="#register" class="button">Create Account</button>
                 </form> <span class="signin">Have an account?<a href="sign.html" target="_blank" class="signin2">Sign in.</a></span></div>
@@ -52,18 +52,18 @@
                   <div class ="logo2">Harbacore</div><br><br>
                   <div class="account2 ">Create your Harbacore account.
              <form id="register">
-                    <label for="email" class="input">Email : </label>
-                    <input type="email"  class="mail2" id="email" name="email" maxlength="50"  required>
-                    <label for="fname" class="input">First name:</label>
-                    <input type="text" id="fname" name="fname" required>
-                    <label for="pwd" class="input">Password:</label>
-                    <input type="password" id="pwd" name="pwd" required>
-                 <label for="pwd" class="input">Confirm Password:</label>
+                    <label for="email" class="input">Email : </label><br>
+                    <input type="email"  class="mail2" id="email" name="email" maxlength="50"  required><br>
+                    <label for="fname" class="input">Name :</label><br>
+                    <input type="text" id="fname" name="fname" required><br>
+                    <label for="pwd" class="input">Password:</label><br>
+                    <input type="password" id="pwd" name="pwd" required><br>
+                 <label for="pwd" class="input">Confirm Password:</label><br>
                     <input type="password" id="pwd" name="pwd" required><br>
                  <button type="button" disabled form="#register" class="button">Create Account</button></form>
                      <span class="signin">Have an account?<a href="sign.html" target="_blank" class="signin2">Sign in.</a></span>
 
-                   </div>
+          </div></div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
