--- a/registerpage/index.html
+++ b/registerpage/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container-fluid d-none d-md-block">
     <div class="row">
-        <div class="col-md-5 divider d-none d-md-block">
+        <div class="col-md-5 divider d-none d-md-block ">
             <div class="content"><div class ="logo">Harbacore</div><br><br>
             <ul class="lists d-none d-md-block">
                 <li><i class="fa fa-check-circle icons pr-2" aria-hidden="true" ></i><b>Quick and free sign-up</b><br><span class="items pl-4">Enter your e-mail address to create an account.</span><br>
@@ -33,7 +33,7 @@
         </div>
         <div class="col-md-7">
             <div class="account">Create your Harbacore account.
-             <form id="register">
+             <form id="register1">
                     <label for="email" class="input">Email :</label><br>
                     <input type="email"  class="mail2" id="email" name="email" maxlength="50"  required><br>
                     <label for="fname" class="input">First name:</label><br>
@@ -41,9 +41,9 @@
                     <label for="pwd" class="input">Password:</label><br>
                     <input type="password" id="pwd" name="pwd" required><br>
                  <label for="pwd" class="input">Confirm Password:</label><br>
-                    <input type="password" id="pwd" name="pwd" required><br>
-                 <button type="button" disabled form="#register" class="button">Create Account</button>
-                </form> <span class="signin">Have an account?<a href="sign.html" target="_blank" class="signin2">Sign in.</a></span></div>
+                    <input type="password" id="pwd2" name="pwd" required><br>
+                 <button type="button" disabled form="#register1" class="button">Create Account</button>
+                </form> <span class="signin text-center">Have an account?<a href="sign.html" target="_blank" class="signin2">Sign in.</a></span></div>
         </div>
     </div>
     </div>
@@ -51,17 +51,17 @@
           
                   <div class ="logo2">Harbacore</div><br><br>
                   <div class="account2 ">Create your Harbacore account.
-             <form id="register">
+             <form id="register2">
                     <label for="email" class="input">Email : </label><br>
-                    <input type="email"  class="mail2" id="email" name="email" maxlength="50"  required><br>
+                    <input type="email"  class="mail2" id="email2" name="email" maxlength="50"  required><br>
                     <label for="fname" class="input">Name :</label><br>
-                    <input type="text" id="fname" name="fname" required><br>
+                    <input type="text" id="fname2" name="fname" required><br>
                     <label for="pwd" class="input">Password:</label><br>
-                    <input type="password" id="pwd" name="pwd" required><br>
+                    <input type="password" id="pwd3" name="pwd" required><br>
                  <label for="pwd" class="input">Confirm Password:</label><br>
-                    <input type="password" id="pwd" name="pwd" required><br>
-                 <button type="button" disabled form="#register" class="button">Create Account</button></form>
-                     <span class="signin">Have an account?<a href="sign.html" target="_blank" class="signin2">Sign in.</a></span>
+                    <input type="password" id="pwd4" name="pwd" required><br>
+                 <button type="button" disabled form="#register2" class="button">Create Account</button></form>
+                     <span class="signin text-center">Have an account?<a href="../signinpage/index.html" target="_blank" class="signin2">Sign in.</a></span>
 
           </div></div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
